services/kavita/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
spec:
  type: NodePort
  selector:
    app: kavita
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500  # Access via http://monolith.local:30500
